--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  <body>
   <!-- <i class="fa fa-credit-card-alt" aria-hidden="true"></i> -->
    <script src="script.js"></script> 
+   <h1>Hello, Yasin</h1>
 
    
  </body>
