--- a/index.html
+++ b/index.html
@@ -3,17 +3,39 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Quote Generater</title>
     <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=dev.to&sz=128">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
    
  </head>
  <body>
-  <!-- <i class="fa fa-credit-card-alt" aria-hidden="true"></i> -->
-   <script src="script.js"></script> 
-   <h1>Hello, Yasin</h1>
+   
+   <div class="container" id="quote-container">
+      <!-- Quote -->
+      <div class="quote-text">
+         <i class="fas fa-quote-left">
+            <span id="quote"></span>
+         </i>
+      </div>
 
+      <!-- Author -->
+      <div class="quote-author">
+         <span id="author"></span>
+      </div>
+
+      <!-- buttons -->
+      <div class="button-container">
+         <button class="button" id="twitter" title="tweet this !">
+            <i class="fab fa-twitter"></i>
+         </button>
+         <button class="button" id="new-quote"> New Quote </button>
+      </div>
+   </div>
+   <!-- loader -->
+   <div class="loader" id="loader"></div>
+   <!-- script -->
+   <script src="script.js"></script>
    
  </body>
  </html>
