--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Infinite Scroll</title>
     <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=dev.to&sz=128">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
    
  </head>
  <body>
-  <!-- <i class="fa fa-credit-card-alt" aria-hidden="true"></i> -->
-   <script src="script.js"></script> 
-   <h1>Hello, Yasin</h1>
-
+ <!-- title -->
+   <h1>Unsplash Api infinite scrool</h1>
+  
+   <!-- loader -->
+   <div class="loader" id="loader">
+      <img src="loader.svg" alt="Loading">
+   </div>
+   <!-- image Container -->
+   <div class="image-container" id="image-container"></div>
    
+<!-- script -->
+   <script src="script.js"></script> 
  </body>
  </html>
